objects/ssot__PartyProfile__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__PrimaryIdentificationName__c</fullName>
        <label>Primary Identification Name</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Primary Identification Name</masterLabel>
            <refAttrDeveloperName>PrimaryIdentificationName</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryIdentifier__c</fullName>
        <label>Primary Identifier</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Primary Identifier</masterLabel>
            <refAttrDeveloperName>PrimaryIdentifier</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryPhone__c</fullName>
        <label>Primary Phone</label>
        <length>40</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Primary Phone</masterLabel>
            <refAttrDeveloperName>PrimaryPhone</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPartyProfileId__c</fullName>
        <label>Related Party Profile</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Related Party Profile</masterLabel>
            <refAttrDeveloperName>RelatedPartyProfileId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RetirementFundAccountNumber__c</fullName>
        <label>Retirement Fund Account Number</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Retirement Fund Account Number</masterLabel>
            <refAttrDeveloperName>RetirementFundAccountNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StockExchange__c</fullName>
        <label>Stock Exchange</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Stock Exchange</masterLabel>
            <refAttrDeveloperName>StockExchange</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Suffix__c</fullName>
        <label>Suffix</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Suffix</masterLabel>
            <refAttrDeveloperName>Suffix</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurnameAtBirth__c</fullName>
        <label>Birth Surname</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Birth Surname</masterLabel>
            <refAttrDeveloperName>SurnameAtBirth</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxpayerIdentificationNumber__c</fullName>
        <label>Taxpayer Identification Number</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Taxpayer Identification Number</masterLabel>
            <refAttrDeveloperName>TaxpayerIdentificationNumber</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658745908_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyProfile_AccountContactId_map_Ac_rel</label>
        <referenceTo>ssot__AccountContact__dlm</referenceTo>
        <relationshipLabel>PartyProfile_AccountContactId_map_Ac_rel</relationshipLabel>
        <relationshipName>rel_1731658745908_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658769704_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyProfile_HouseholdAccountId_map__rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyProfile_HouseholdAccountId_map__rel</relationshipLabel>
        <relationshipName>rel_1731658769704_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731658775275_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyProfile_AccountId_map_Account_I_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>PartyProfile_AccountId_map_Account_I_rel</relationshipLabel>
        <relationshipName>rel_1731658775275_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Party Profile</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Party</referenceEntityGroup>
        <referenceEntityName>PartyProfile</referenceEntityName>
        <referenceEntitySubjectArea>Party</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>